force-app/main/default/objects/Apttus__WizardRuleset2__c/fields/APTS_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>APTS_Record_Type_Name__c</fullName>
    <description>For Internal Use in Wizard Migration</description>
    <label>Record Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>