force-app/main/default/objects/Apttus__WizardRuleset2__c/fields/Apttus__ContextObject__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ContextObject__c</fullName>
    <description>Name of the object when the rule is of type &#39;Determine Focus Object&#39; or &#39;Determine Record Type&#39;</description>
    <inlineHelpText>Name of the object when the rule is of type &#39;Determine Focus Object&#39; or &#39;Determine Record Type&#39;</inlineHelpText>
    <label>Context Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>