force-app/main/default/objects/Apttus__WizardRuleset2__c/fields/Apttus__ToWizardStepId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ToWizardStepId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Applicable to rule type &#39;Go To Step&#39;.</description>
    <inlineHelpText>Applicable to rule type &#39;Go To Step&#39;.</inlineHelpText>
    <label>Go To Wizard Step</label>
    <referenceTo>Apttus__WizardStep2__c</referenceTo>
    <relationshipLabel>Step Rulesets (To)</relationshipLabel>
    <relationshipName>StepRulesetsTo</relationshipName>
    <type>Lookup</type>
</CustomField>